# isnoda

./: .gitignore  .travis.yml  .zenodo.json  LICENSE  README.md  osx_install.md
comparison/: Snobal-SWI.ipynb  Snobal-SWI_static.ipynb  Snobal-SWI_static_AGU22.ipynb  SnowMovie.ipynb  common.py  environment.yml  raster_file.py  solar_hours.ipynb
conda/: README.md  basin_setup-activate.sh  basin_setup.yaml  environment.yaml  environment.yml  environment_Mac_OSX.yml  environment_p37.yml  environment_p39.yaml  install_ipw.sh  install_isnobal.sh  install_isnoda.sh  install_isnoda_development.sh  install_tauDEM.md  ipw-deactivate.sh  ipw_build.yml  isnobal-activate.sh  isnobal-deactivate.sh  isnoda-activate.sh  isnoda-deactivate.sh  katana.yaml
config/: ERW_subset.ini  (+6 more)
package/: README.md  environment.yml  requirements.txt  setup.cfg
package/data/: WesternUS.tif
package/data/modis/: README.md
package/data/snotel/: sites.json
package/src/snobedo/data/: __init__.py  write_nc.py
package/src/snobedo/input/: __init__.py  hrrr_parameter.py  smrf_topo.py
package/src/snobedo/isnobal/: README.md  smrf_compactor.py
package/src/snobedo/lib/: __init__.py  combine_files.py  command_line_helpers.py  dask_utils.py  isnobal_helpers.py  modis_geotiff.py
package/src/snobedo/modis/: README.md  __main__.py  geotiff_to_zarr.py  matlab_to_geotiff.py
package/src/snobedo/output/: __init__.py  hrrr_param_for_topo.py  netcdf.py
package/src/snobedo/package_data/: de440_earth_sun.bsp
package/src/snobedo/shortwave/: __init__.py  dswrf_for_day.py  hrrr_dswrf.py  load_topo.py  smrf_sunang.py  sun_position.py  sunang.py  topo_shade.py  topo_shade_for_day.py
package/src/snobedo/snotel/: README.md  __init__.py  csv_parser.py  data_from_isnobal.py  site_loader.py  snotel_locations.py  snotel_site.py
(+159 files in other folders)
