[metadata]
name = snobedo
version = 0.1
author = Joachim Meyer
author_email = j.meyer@utah.edu
description = Remote sensing data as inputs for iSnobal
url= https://github.com/UofU-Cryosphere/isnoda
license = MIT

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.data_files]
data = data/WesternUS.tif

[options.entry_points]
console_scripts =
    variable_from_modis = snobedo.modis.__main__:main
