[metadata]
name = snobedo
version = 0.1
author = Joachim Meyer
author_email = j.meyer@utah.edu
description = Tools for iSnobal model
url = https://github.com/UofU-Cryosphere/isnoda
license = MIT

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
snobedo.package_data =
    *.bsp

[options.entry_points]
console_scripts =
    snotel_from_snobal = snobedo.snotel.data_from_isnobal:main
    hrrr_param_for_topo = snobedo.output.hrrr_param_for_topo:main
    topo_shade_for_day = snobedo.shortwave.topo_shade_for_day:main
